--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-fastapi
-uvicorn
-pandas
-numpy
-faiss-cpu
-matplotlib
-tqdm
-sentence-transformers
-spacy
-gensim
-
+fastapi==0.104.1
+uvicorn==0.24.0
+numpy==1.24.3
+faiss-cpu==1.7.4
+pandas==2.1.3
+tqdm==4.66.1
+pydantic==2.5.2
+scikit-learn==1.3.2
+psycopg2-binary==2.9.9
+sqlalchemy==2.0.23 
+psutil
